src/_styles/main.scss
/* ... */
@media (prefers-color-scheme: dark) {
  :root {
    --content-background-color: #181818;
    --content-text-color: #ffffff;
    --content-link-color: #FE1412;
    --code-block-background: #444444;
  }
}

html {
  height: 100%;
  font-size: 100%;
}

html,
body {
  min-height: 100%;
}

body {
  background: #000000;
  color: #ffffff;
  margin: 0;
  font-family: Courier, monospace;
  line-height: 1.75;
  display: flex;
  flex-direction: column;
}

h1,
h2,
h3,
h4,
p {
  margin: 0;
  padding: 0;
}

p,
pre[class*="language-"] {
  margin-top: 0;
  margin-bottom: 1rem;
}

h1,
h2,
h3,
h4,
h5 {
  margin: 2rem 0 1.38rem;
  font-family: "Press Start 2P Modified", Courier, monospace;
  font-weight: 400;
  line-height: 0.9;
}

.content__header h2 {
  margin-top: 1.38rem;
}

h1 {
  margin: 0 0 1rem;
  font-size: 4.209rem;
}

h2 {
  font-size: 3.157rem;
}

h3 {
  font-size: 2.369rem;
}

h4 {
  font-size: 1.777rem;
}

h5 {
  font-size: 1.333rem;
}

small,
.text_small {
  font-size: 0.75rem;
}

.content__header::after,
h2:not(.content__header h2)::after,
h3::after,
h4::after,
h5::after,
.content__footer::before,
.content__footer::after,
.webmentions::before,
.webmentions__header::after {
  content: " ";
  height: 0.25rem;
  width: 100%;
  display: block;
  background: repeating-linear-gradient(
    90deg,
    #000000 0rem,
    #000000 0.5rem,
    #ffffff 0.5rem,
    #ffffff 1rem
  );
  margin-top: 0.5rem;
}

small,
.text_small {
  font-size: 0.833rem;
}

a,
a:hover,
a:visited,
a:active {
  color: #ffffff;
}

a:hover {
  text-decoration: none;
}

*:focus {
  outline: 0.25rem solid var(--highlight-color);
  outline-offset: 0.25rem;
  z-index: 1;
}

.skip-link:not(:focus) {
  border: 0;
  clip: rect(0 0 0 0);
  height: auto;
  margin: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
}

.skip-link {
  position: absolute;
  top: 1rem;
  left: 1rem;
  font-size: 1.9em;
  border: 0.25rem solid #ffffff;
  background: #000000;
  padding: 0.25rem;
}

.header {
  position: relative;
  overflow: hidden;
  line-height: 0.7;
}

.header--hero {
  --responsive-direction: column;
  --header-name-text-size: min(14.4vw, 16vh);
  --header-start-text-size: min(7.2vw, 8vh);
  --header-line-width: min(0.5625vw, 0.625vh);
  --header-line-spacing: min(2.25vw, 2.5vh);

  /*
    Pixel art scaling
    1px = 0.1875vh
  */
  --spaceship-container-height: max(10.75rem, 45vh);
  --spaceship-height: max(5rem, 15vh);
  --spaceship-movement: max(1rem, 3vh);
  --asteroid-size: max(2.625rem, 7.875vh);
  --laser-height: max(0.375rem, 1.125vh);
  --laser-width: max(2.375rem, 7.125vh);
  --header-background-size: max(25rem, 75vh);
  --asteroid-position: calc(
    ((50% - (var(--spaceship-height) / 2) - var(--asteroid-size)) / 2) -
      var(--spaceship-movement)
  );
  --laser-endstop: max(calc(100vw + (var(--laser-width) / 2)), calc(36.625rem));
}

.header__background {
  position: absolute;
  width: calc(200vw + var(--header-background-size));
  height: 100%;
  top: 0rem;
  left: 0rem;
  background: url("/static/images/stars.svg"), #000000;
  background-size: var(--header-background-size);
  will-change: transform;
  z-index: -1;
}

.header__content {
  min-height: 12.5rem;
  width: calc(100vw - (var(--content-margin) * 2));
  max-width: var(--content-max-width);
  display: flex;
  flex-direction: var(--responsive-direction);
  justify-content: center;
  align-items: center;
  position: relative;
  margin: 0 auto;
  padding: calc(var(--spaceship-movement) * 2) 0rem;
  box-sizing: border-box;
}

.header--hero .header__content {
  min-height: calc(100vh - 5rem);
  width: 100%;
  max-width: 100%;
}

.header__content::after {
  content: " ";
  flex: var(--header-flex);
}

.header__spaceship {
  display: flex;
  align-items: center;
  flex: var(--header-flex);
}

.header--hero .header__spaceship {
  justify-content: center;
  width: 100%;
  flex: 1 1 var(--spaceship-container-height);
  position: relative;
}

.header--hero .header__laser {
  position: absolute;
  width: var(--laser-width);
  height: var(--laser-height);
  background-image: url("/static/images/laser.svg");
  background-size: var(--laser-width);
  left: calc(50% - (var(--laser-width) / 2));
  top: calc(50% + (var(--laser-height) / 2));
  will-change: transform, opacity;
  opacity: 0;
}

.header--hero .header__asteroid {
  position: absolute;
  width: var(--asteroid-size);
  height: var(--asteroid-size);
  left: max(100vw, var(--header-background-size));
  will-change: transform;

  overflow: hidden;
}

.header--hero .header__asteroid::before {
  content: " ";
  display: block;
  background-image: url("/static/images/asteroid.svg");
  background-size: auto var(--asteroid-size);
  width: calc(var(--asteroid-size) * 20);
  height: var(--asteroid-size);
  will-change: transform;
}

.header--hero .header__asteroid--1,
.header--hero .header__asteroid--2,
.header--hero .header__asteroid--3 {
  top: var(--asteroid-position);
}

.header--hero .header__asteroid--4,
.header--hero .header__asteroid--5,
.header--hero .header__asteroid--6 {
  bottom: var(--asteroid-position);
}

.header__spaceship-wrapper svg {
  height: var(--spaceship-height);
  width: calc(var(--spaceship-height) * 2);
  will-change: transform;
  display: block;
}

.header__text {
  font-family: "Press Start 2P Modified", Courier, monospace;
  color: #ffffff;
  text-align: center;
  width: min-content;
  height: min-content;
  user-select: none;
  margin-top: 0.5rem;
  perspective: calc(var(--header-name-text-size) * 0.75);
  line-height: 0.7;
}

.header__name {
  font-size: var(--header-name-text-size);
  text-transform: uppercase;
  transform: rotateX(5deg);
  transform-origin: 100% 100%;
  margin-bottom: 1rem;
  text-decoration: none;
  color: #ffffff;
  display: block;
}

.header__start {
  display: flex;
  font-size: var(--header-start-text-size);
  align-items: center;
  justify-content: center;
  cursor: pointer;
}
/* ... */

